<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewStatus"
            type="com.example.moviereview.ui.utils.DataStatus.Status" />

        <import type="android.view.View" />

        <import type="com.example.moviereview.ui.utils.DataStatus.Status" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_default"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/filterMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            android:background="@drawable/shape_rounded"
            android:backgroundTint="@color/colorDarkWhite"
            android:orientation="vertical"
            android:visibility="gone"
            tools:context=".ui.views.discover.DiscoverFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/title_type"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTypeFilterOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="2"
                tools:listitem="@layout/item_filter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/title_genre"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvGenreFilterOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_filter" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/title_network"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNetworkFilterOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_default"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="4"
                tools:listitem="@layout/item_filter" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/margin_default"
                android:weightSum="2">

                <TextView
                    android:id="@+id/btnCloseFilters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_weight="1"
                    android:background="@drawable/shape_rounded"
                    android:backgroundTint="@color/colorLightGrey"
                    android:gravity="center"
                    android:padding="@dimen/margin_default"
                    android:text="@string/button_close"
                    android:textColor="@color/colorDarkGrey"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btnSearchFilters"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_default"
                    android:layout_weight="1"
                    android:background="@drawable/shape_rounded"
                    android:backgroundTint="@color/colorGreen"
                    android:gravity="center"
                    android:padding="@dimen/margin_default"
                    android:text="@string/button_search"
                    android:textColor="@color/colorDarkWhite"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDiscoverMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:visibility="@{viewStatus == Status.SUCCESS ? View.VISIBLE : View.GONE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_media"
            tools:visibility="visible" />

        <include
            android:id="@+id/discoverFragmentLoading"
            layout="@layout/layout_loading"
            android:visibility="@{viewStatus == Status.LOADING ? View.VISIBLE : View.GONE}" />

        <include
            android:id="@+id/discoverFragmentError"
            layout="@layout/layout_error"
            android:visibility="@{viewStatus == Status.ERROR ? View.VISIBLE : View.GONE}" />

        <include
            android:id="@+id/discoverFragmentEmpty"
            layout="@layout/layout_empty"
            android:visibility="@{viewStatus == Status.EMPTY ? View.VISIBLE : View.GONE}" />
    </LinearLayout>
</layout>